# langpa_validation_tools

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  coverage.xml  geneset_folder_mapping.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run_file_mapping.csv
00_Gliosis/: Prompt__Perform comprehensive literature analysis.md
01_OPC-AC-like_1/: Prompt__Perform comprehensive literature analysis.md
05_AC-neuronal-like/: run_2.md
06_OPC-NPC-like/: run_2.md
08_Gliosis-hypoxia/: Prompt__Perform comprehensive literature analysis(1).md  Prompt__Perform comprehensive literature analysis.md
10_AC-gliosis-like_2/: Prompt__Perform comprehensive literature analysis.md
11_OPC-like_1/: Prompt__Perform comprehensive literature analysis(1) copy.md
Comparisons/: comparison geneset_11.md  comparison geneset_12.md  comparison geneset_2.md  comparison geneset_3.md  comparison geneset_4.md  comparison geneset_6.md
analysis/: consistency_and_go_summary.ipynb  deepsearch_consistency.ipynb  deepsearch_report.md  detailed_similarity.md  embedding_confusion_matrix.csv
data/: comparison_program_term_matches.csv  component_embeddings.npy  component_program_matches.csv  deepsearch_duplicate_runs.csv  deepsearch_program_matches.csv  deepsearch_runs.csv  deepsearch_unmatched_programs.csv  go_embeddings_index.csv  go_terms.csv
geneset_1/: Prompt__Perform comprehensive literature analysis_2.md
geneset_10/: Prompt__Perform comprehensive literature analysis(1).md  Prompt__Perform comprehensive literature analysis.md
notebooks/: README.md
projects/: README.md
(+256 files in other folders)
