[project]
name = "glioblastoma-perplexity-ds-manual"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "jupyter",
    "pandas",
    "matplotlib",
    "numpy",
    "openai>=1.0.0",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/embed_*" ]

[tool.coverage.report]
show_missing = true
skip_covered = true
